[workspace]
resolver = "2"

members = [
    "soroban-env-host",
    "soroban-env-guest",
    "soroban-env-common",
    "soroban-env-common/tests/no_std",
    "soroban-env-macros",
    "soroban-builtin-sdk-macros",
    "soroban-test-wasms",
    "soroban-synth-wasm",
    "soroban-bench-utils",
    "soroban-simulation",
]

exclude = ["soroban-test-wasms/wasm-workspace"]

[workspace.package]
version = "20.1.1"
rust-version = "1.74.0"

[workspace.dependencies]
soroban-env-common = { version = "=20.1.1", path = "soroban-env-common", default-features = false }
soroban-env-guest = { version = "=20.1.1", path = "soroban-env-guest" }
soroban-env-host = { version = "=20.1.1", path = "soroban-env-host" }
soroban-env-macros = { version = "=20.1.1", path = "soroban-env-macros" }
soroban-builtin-sdk-macros = { version = "=20.1.1", path = "soroban-builtin-sdk-macros" }

# NB: When updating, also update the version in rs-soroban-env dev-dependencies
[workspace.dependencies.hcnet-xdr]
version = "=20.0.4"
git = "https://github.com/HashCash-Consultants/rs-hcnet-xdr"
rev = "bb9eef6c2807f8504b983a8e1230a9c753bb6b14"
default-features = false

[workspace.dependencies.wasmi]
package = "soroban-wasmi"
version = "=0.31.1-soroban.20.0.1"
git = "https://github.com/HashCash-Consultants/wasmi"
rev = "2329ceae38c43c15607d71474d7be7776f428b3c"

# [patch."https://github.com/hcnet/rs-hcnet-xdr"]
# hcnet-xdr = { path = "../rs-hcnet-xdr/" }
# [patch."https://github.com/hcnet/wasmi"]
# soroban-wasmi = { path = "../wasmi/crates/wasmi/" }
# soroban-wasmi_core = { path = "../wasmi/crates/core/" }

[profile.release]
lto = true

[profile.test-opt]
inherits = "test"
opt-level = 3
debug = false
