[package]
name = "soroban-builtin-sdk-macros"
description = "Soroban builtin SDK macros."
homepage = "https://github.com/HashCash-Consultants/rs-soroban-env.git"
repository = "https://github.com/HashCash-Consultants/rs-soroban-env.git"
authors = [""]
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = {version="=2.0.39",features=["full"]}
quote = "=1.0.33"
proc-macro2 = "=1.0.69"
itertools = "=0.11.0"

[package.metadata.docs.rs]
all-features = true
